tests/snapshots/cli_with_configuration__that_cli_argument_overrides_configuration_of_main_branch_pattern.snap
---
source: tests/cli_with_configuration.rs
description: "Git Graph:\n    * ##SHA## (HEAD -> stem) 0.1.0-rc.1\n\nConfiguration (.git-versioner.toml):\n    MainBranch = \"^another_main_branch$\"\n"
info:
  program: git-versioner
  args:
    - "--main-branch"
    - stem
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "MajorMinorPatch": "0.1.0",
  "PreReleaseTag": "rc.1",
  "PreReleaseTagWithDash": "-rc.1",
  "PreReleaseLabel": "rc",
  "PreReleaseLabelWithDash": "-rc",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "0.1.0-rc.1",
  "AssemblySemVer": "0.1.0",
  "FullSemVer": "0.1.0-rc.1",
  "InformationalVersion": "0.1.0-rc.1"
}

----- stderr -----
