tests/snapshots/cli_with_configuration__that_cli_argument_overrides_configuration_of_version_pattern.snap
---
source: tests/cli_with_configuration.rs
description: "Git Graph:\n    * ##SHA## (HEAD -> trunk, tag: my/v1.0.0) 0.1.0-rc.1\n    * ##SHA## 0.1.0-rc.1\n\nConfiguration (.git-versioner.toml):\n    VersionPattern = \"my/c(?<Version>.*)\"\n"
info:
  program: git-versioner
  args:
    - "--version-pattern"
    - my/v(?<Version>.*)
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 1,
  "Minor": 0,
  "Patch": 0,
  "MajorMinorPatch": "1.0.0",
  "PreReleaseTag": "",
  "PreReleaseTagWithDash": "",
  "PreReleaseLabel": "",
  "PreReleaseLabelWithDash": "",
  "PreReleaseNumber": "",
  "BuildMetadata": "",
  "SemVer": "1.0.0",
  "AssemblySemVer": "1.0.0",
  "FullSemVer": "1.0.0",
  "InformationalVersion": "1.0.0",
  "BranchName": "trunk",
  "EscapedBranchName": "trunk"
}

----- stderr -----
