tests/snapshots/cli_with_configuration__that_toml_config_file_overrides_default_release_branch_pattern.snap
---
source: tests/cli_with_configuration.rs
description: "Git Graph:\n    * ##SHA## (HEAD -> custom-release/1.0.0) 1.0.1-pre.1\n    * ##SHA## (tag: v1.0.0, trunk) 0.1.0-pre.1\n    * ##SHA## 0.1.0-pre.1\n\nConfiguration (.git-versioner.toml):\n    ReleaseBranch = \"custom-release/(?<BranchName>.*)\"\n"
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 1,
  "Minor": 0,
  "Patch": 1,
  "MajorMinorPatch": "1.0.1",
  "PreReleaseTag": "pre.1",
  "PreReleaseTagWithDash": "-pre.1",
  "PreReleaseLabel": "pre",
  "PreReleaseLabelWithDash": "-pre",
  "PreReleaseNumber": "1",
  "BuildMetadata": "",
  "SemVer": "1.0.1-pre.1",
  "AssemblySemVer": "1.0.1",
  "FullSemVer": "1.0.1-pre.1",
  "InformationalVersion": "1.0.1-pre.1",
  "BranchName": "custom-release/1.0.0",
  "EscapedBranchName": "custom-release-1-0-0"
}

----- stderr -----
